--- a/app/src/main/res/layout/main_activity_bottom_nav.xml
+++ b/app/src/main/res/layout/main_activity_bottom_nav.xml
@@ -8,6 +8,8 @@
     android:layout_gravity="bottom"
     android:background="?android:attr/windowBackground"
     android:visibility="visible"
+    android:elevation="4dp"
+    app:layout_behavior="@string/hide_bottom_view_on_scroll_behavior"
     app:menu="@menu/navigation">
 
 </com.google.android.material.bottomnavigation.BottomNavigationView>
