--- a/app/src/main/res/layout/main_activity_bottom_nav.xml
+++ b/app/src/main/res/layout/main_activity_bottom_nav.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.bottomnavigation.BottomNavigationView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/main_bottom_nav"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_gravity="bottom"
-    android:background="?android:attr/windowBackground"
-    android:visibility="visible"
-    android:elevation="4dp"
-    app:layout_behavior="@string/hide_bottom_view_on_scroll_behavior"
-    app:menu="@menu/navigation">
+xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+android:id="@+id/main_bottom_nav"
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+android:layout_gravity="bottom"
+android:background="?android:attr/windowBackground"
+android:visibility="visible"
+style="@style/Widget.MaterialComponents.BottomNavigationView"
+app:layout_behavior=".view.behavior.BottomNavigationBehavior"
+app:menu="@menu/navigation">
 
 </com.google.android.material.bottomnavigation.BottomNavigationView>
