--- a/app/src/main/res/layout/main_activity_bottom_nav.xml
+++ b/app/src/main/res/layout/main_activity_bottom_nav.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.BottomNavigationView
+<com.google.android.material.bottomnavigation.BottomNavigationView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main_bottom_nav"
@@ -12,4 +12,4 @@
     app:layout_behavior=".view.behavior.BottomNavigationBehavior"
     app:menu="@menu/navigation">
 
-</android.support.design.widget.BottomNavigationView>
+</com.google.android.material.bottomnavigation.BottomNavigationView>
