--- a/app/src/main/res/layout/recycle_hotkey_item.xml
+++ b/app/src/main/res/layout/recycle_hotkey_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.chip.Chip
+<com.google.android.material.chip.Chip
     xmlns:android="http://schemas.android.com/apk/res/android"
     style="@style/Widget.MaterialComponents.Chip.Choice"
     android:id="@+id/hot_key_chip"
