--- a/app/src/main/res/layout/recycle_search_history.xml
+++ b/app/src/main/res/layout/recycle_search_history.xml
@@ -7,13 +7,13 @@
     android:paddingLeft="@dimen/activity_horizontal_padding"
     android:paddingRight="@dimen/activity_horizontal_padding">
 
-    <android.support.v7.widget.AppCompatImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="@dimen/activity_vertical_padding"
         app:srcCompat="@drawable/ic_history_grey_24dp" />
 
-    <android.support.v7.widget.AppCompatTextView
+    <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/search_history_item_key"
         android:layout_width="0dp"
         android:layout_height="match_parent"
@@ -21,7 +21,7 @@
         android:gravity="center"
         android:textSize="18sp" />
 
-    <android.support.v7.widget.AppCompatTextView
+    <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/search_history_item_date"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
